--- a/public/p2p.html
+++ b/public/p2p.html
@@ -42,9 +42,12 @@
 
         //객체 생성
         let knowledgetalk = new Knowledgetalk();
+        
+        let cpCode = "KP-20200101-01";
+        let authKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoi64Kg66as7KeA7Y-s7J247Yq4IiwibWF4VXNlciI6IjUwMDAwMDAwIiwic3RhcnREYXRlIjoiMjAyMC0wMS0wMVQwNjo0NzowMC4wMDBaIiwiZW5kRGF0ZSI6IjIwMzAtMTItMzFUMDY6NDc6MDAuMDAwWiIsImF1dGhDb2RlIjoiS1AtMjAyMDAxMDEtMDEiLCJjb21wYW55Q29kZSI6IkxJQy0wMSIsImlhdCI6MTU4NzUzODExNH0.73A0UiiMHJeIS8pIgoN4DfEWT4QCsMnXkO4uUdnfbYI";
 
         //해당 url 로 init
-        knowledgetalk.init('https://dev.knowledgetalk.co.kr:7102').then(result => {
+        knowledgetalk.init(cpCode, authKey).then(result => {
             if(result.code !== '200') {
                 alert('init failed!');
                 return;
