--- a/public/group.html
+++ b/public/group.html
@@ -115,7 +115,7 @@
             switch (type){
                 //다른 user 의 입장 알림
                 case 'join':
-                    createVideoBox(msg.user.userId);
+                    createVideoBox(msg.user.id);
                 break;
 
                 //다른 user 의 퇴장 알림
